# cyclone-prototype

./: .gitignore  README.md
cyclone_description/: CMakeLists.txt  package.xml
cyclone_description/hooks/: cyclone_description.dsv.in  cyclone_description.sh.in
cyclone_description/models/: camera.xacro  rov.sdf  rov_proc.sdf  rov_xacro.sdf  t200_thruster.xacro
cyclone_hw/: CMakeLists.txt  package.xml
cyclone_hw/include/cyclone_hw/: T200.hpp  ThrustAllocator.hpp  ThrustAllocatorNode.hpp
cyclone_hw/src/: T200.cpp  ThrustAllocator.cpp  ThrustAllocatorNode.cpp  cyclone_hw.cpp
cyclone_sim_bringup/: CMakeLists.txt  package.xml
cyclone_sim_bringup/config/: bridge_config.yaml
cyclone_sim_bringup/launch/: cyclone_sim.launch.py
cyclone_sim_bringup/worlds/: water_world.sdf
